// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnsibleRolesSwitcherSelectors should return all roles when no roles assigned 1`] = `
Array [
  Object {
    "id": 1,
    "name": "sthirugn.motd",
  },
  Object {
    "id": 2,
    "name": "jtyr.ntp",
  },
  Object {
    "id": 3,
    "name": "rvm.ruby",
  },
  Object {
    "id": 4,
    "name": "geerlingguy.java",
  },
]
`;

exports[`AnsibleRolesSwitcherSelectors should return assigned variables 1`] = `
Array [
  Object {
    "ansibleVariables": Array [
      Object {
        "id": 15,
        "parameter": "motd",
      },
    ],
    "id": 1,
    "name": "sthirugn.motd",
  },
  Object {
    "ansibleVariables": Array [
      Object {
        "id": 16,
        "parameter": "whatever",
      },
    ],
    "id": 2,
    "name": "jtyr.ntp",
  },
]
`;

exports[`AnsibleRolesSwitcherSelectors should return unassigned roles 1`] = `
Array [
  Object {
    "id": 1,
    "name": "sthirugn.motd",
  },
  Object {
    "id": 3,
    "name": "rvm.ruby",
  },
]
`;

exports[`AnsibleRolesSwitcherSelectors should select form object 1`] = `
Object {
  "parentId": 4,
  "resourceId": 5,
  "resourceName": "Host",
}
`;

exports[`AnsibleRolesSwitcherSelectors should select variables loading 1`] = `true`;
